--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.login.PrincipalActivity"
+    tools:context=".ui.Principal.PrincipalActivity"
     tools:showIn="@layout/activity_principal">
 
 </android.support.constraint.ConstraintLayout>
